--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ background-color: var(--ligthpurple);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding: 25px;
+    padding: 20px;
     border-radius: 15px;
     width: 460px;
     gap: 20px;
@@ -103,6 +103,7 @@ background-color: var(--ligthpurple);
     display: flex;
     align-items: center;
     justify-content: space-around;
+    gap: 15px;
 }
 .row-item{
     display: flex;
@@ -121,6 +122,10 @@ background-color: var(--ligthpurple);
 }
 .container_hidden{
     display: none;
+}
+.iconInfo{
+    color: #e1bee7c4;
+    font-size: 22px;
 }
 
 
